# RPi_ImageToHaiku

./: .gitignore  .gitmodules  README.adoc  README.md  pyproject.toml  vitKeras
sound_effects/: beep.m4a
ternary/: ViT_lite.py  __init__.py  camera.py  haiku_llama.py  ternary.py  tts.py  vit.py
ternary/console/: app.py
text_to_speech/: generator.py  hifigan.py  hifigan_wrapper.py  prune.py  tacotron_model.py  tacotron_prune.py  test_backend.py
