[project]
name = "ternary"
version = "0.1.0"
description = ""
authors = [{ name = "Arnav Sacheti", email = "asacheti@wpi.edu" }]
readme = "README.adoc"
requires-python = ">=3.11"
dependencies = [
  "transformers (>=4.51.3,<5.0.0)",
  "torch (>=2.7.0,<3.0.0)",
  "accelerate (>=1.6.0,<2.0.0)",
  "peft (>=0.15.2,<0.16.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
ternary = "ternary.console.app:main"
