[project]
name = "ternary"
version = "0.1.0"
description = ""
authors = [{ name = "Arnav Sacheti", email = "asacheti@wpi.edu" }]
readme = "README.adoc"
requires-python = "~=3.11"
dependencies = [
  "transformers (>=4.51.3,<5.0.0)",
  "torch (>=2.7.0,<3.0.0)",
  "accelerate (>=1.6.0,<2.0.0)",
  "peft (>=0.15.2,<0.16.0)",
  "opencv-python (>=4.11.0.86,<5.0.0.0)",
  "llama-cpp-python (>=0.3.8,<0.4.0)",
  "speechbrain (>=1.0.3,<2.0.0)",
  "scipy (>=1.15.2,<2.0.0)",
  "torchvision (>=0.22.0,<0.23.0)",
  "tensorflow (>=2.19.0,<3.0.0)",
  "keras (>=3.9.2,<4.0.0)",
  "tf-keras (>=2.19.0,<3.0.0)",
  "torchaudio (>=2.7.0,<3.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
ternary = "ternary.console.app:main"
